# nebari-plugin-examples

./: README.md
examples/nebari_stage_hello_world/: pyproject.toml
examples/nebari_stage_hello_world/nebari_stage_hello_world/: __init__.py
examples/nebari_subcommand_hello_world/: pyproject.toml
examples/nebari_subcommand_hello_world/nebari_subcommand_hello_world/: __init__.py
examples/nebari_subcommand_scaffold/: README.md  pyproject.toml
examples/nebari_subcommand_scaffold/src/scaffold/: scaffold_cmd.py
examples/nebari_subcommand_scaffold/src/scaffold/subcommands/plugin/: plugin_cmd.py
examples/nebari_subcommand_scaffold/src/scaffold/subcommands/plugin/stage/: stage_runner.py
examples/nebari_subcommand_scaffold/src/scaffold/subcommands/plugin/subcommand/: subcommand_runner.py
examples/nebari_subcommand_scaffold/src/scaffold/subcommands/plugin/subcommand/templates/: cookiecutter.json
examples/nebari_subcommand_scaffold/src/scaffold/subcommands/plugin/subcommand/templates/{{ cookiecutter.project_name }}/: pyproject.toml.j2
examples/nebari_subcommand_scaffold/src/scaffold/subcommands/plugin/subcommand/templates/{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}/: __init__.py.j2
examples/nebari_subcommand_scaffold/src/scaffold/subcommands/plugin/subcommand/templates/{{ cookiecutter.project_name }}/tests/: test_{{ cookiecutter.project_name }}.py.j2
examples/nebari_subcommand_scaffold/tests/: test_subcommand_defaults.py
